fix(VNavigationDrawer): remove x-axis overflow

--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -46,6 +46,7 @@
 .v-navigation-drawer__content
   height: 100%
   overflow-y: auto
+  overflow-x: hidden
 
 // Modifier
 .v-navigation-drawer--right
